Поправила зачечание при наведении курсора в форме rec-94

--- a/src/components/HelpModal/HelpModal.scss
+++ b/src/components/HelpModal/HelpModal.scss
@@ -63,6 +63,9 @@
   width: 19px;
   height: 19px;
   fill: $textColor;
+  & :hover rect {
+    fill: $accentColor;
+  }
   & :focus rect {
     fill: $accentColor;
   }
