--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -350,7 +350,7 @@
   }
 
   .footer__requisites {
-    margin-bottom: 25px;
+    margin-bottom: 33px;
   
   }
 
@@ -367,7 +367,9 @@
       margin-left: 28px;
     }
   }
-
+  .footer__requisites_spaceMob {
+    display: none;
+  }
   .footer__icon {
     width: 28px;
     
@@ -396,6 +398,7 @@
   .footer__contacts {
     grid-area: contacts;
     align-self: flex-end;
+    line-height: 2.3;
   }
 
   .footer__requisitesAndRights {
@@ -406,11 +409,9 @@
   }
 
   .footer__requisites {
-    margin-bottom: 0;
+    margin-bottom: 0px;
   }
-  .footer__requisites_spaceMob {
-    display: none;
-  }
+
   .footer__address_table {
     /* display: block; */
     br {
@@ -424,7 +425,7 @@
   }
 
   .footer__email {
-    margin-bottom: 10px;
+    margin-bottom: 0px;
   }
 
   .footer__manager {
@@ -454,7 +455,7 @@
 
   @media (max-width: 330px) {
     .footer__inner {
-      font-size: 8px;
+      font-size: 10px;
       padding-top: 15px;
     }
 
@@ -463,11 +464,11 @@
     }
 
     .footer__manager {
-      font-size: 8px;
+      font-size: 10px;
     }
 
     .footer__email {
-      margin-bottom: 4px;
+      margin-bottom: 0px;
     }
 
     .footer__icon {
@@ -475,11 +476,11 @@
     }
 
     .footer__requisitesAndRights {
-      font-size: 6px;
+      font-size: 8px;
       line-height: 1.3;
     }
     .footer__address {
-      font-size: 6px;
+      font-size: 8px;
       line-height: 1.3;
     }
   }
